Closed Bug 1637806 Opened 4 years ago Closed 4 years ago

Don't set CanSkipCompose::IfPossible if we don't have the previous composite value in AnimationHelper::SampleAnimationForEachNode

Categories

(Core :: Graphics: Layers, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: hiro, Assigned: hiro)

Details

Attachments

(1 file)

Severity: -- → S3
Priority: -- → P3
Pushed by hikezoe.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7b0e9e06d3e4
Skip composing only if there exists the previous composed value. r=boris
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: