Bug 1637806 - Skip composing only if there exists the previous composed value. r=boris

Differential Revision: https://phabricator.services.mozilla.com/D75224